Bug 427503 - Orion New UI Improvements - Fixed z-index for side menu transition

--- a/bundles/org.eclipse.orion.client.ui/web/css/layout.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/layout.css
@@ -429,7 +429,7 @@ hard-coded numbers elsewhere.
     top: 36px;
 	/* bottom: 36px; $FooterHeight + footer border (1px) */   
     bottom: 0;
-    z-index: -1;
+    z-index: 0;
     -webkit-animation: slide 0.5s forwards;
     -webkit-animation-delay: 2s;
     animation: slide 0.5s forwards;
@@ -439,6 +439,10 @@ hard-coded numbers elsewhere.
     font-family: sans-serif;
 	font-size:10px;
 	text-decoration:none !important;
+}
+
+.sideMenu:hover{
+	z-index: 100;
 }
 
 .sideMenu-maximized {
